# whisper-transcribe

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.claude/: settings.json
.github/workflows/: ci.yml  draft-release.yml
.streamlit/: config.toml
docs/plans/: 2026-03-07-detailed-analysis-view-design.md  2026-03-07-detailed-analysis-view-plan.md
tests/: test_app.py
