[project]
name = "whisper-transcribe"
version = "0.10.0"
description = "Streamlit application for transcription and translation using OpenAI Whisper on Apple Silicon with MLX."
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "mlx-whisper",
    "streamlit>=1.58",
    "yt-dlp",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "ty",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ty.environment]
python-version = "3.12"
